# DBCourse-3Semester

./: pyproject.toml
base/: admin.py  fill.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py
main/: settings.py  urls.py
